# Graph-handler

./: .gitignore  Cargo.toml  log4rs.yaml  readme.md
src/: main.rs
src/mandelbrot/: code.rs  mandelbrot.rs
src/request/: structures.rs
src/response/: graph.rs  mod.rs  structs.rs
src/structure/: graph.rs  initialisation_error.rs  mod.rs  node.rs
