[package]
name = "graph-back-end"
version = "0.1.0"
authors = ["leffad karim <leffadkarim97@live.fr>"]
include = ["Cargo.toml", "src/**/*.rs"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
# Number (Complex manipulation)
num = "0.1.27"

# De/Serialization
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"

# image format
image = "0.13.0"


# Server Web
actix-web = "2"
actix-rt = "1"

# logger
log = "0.4.8"
log4rs = "0.12.0"
